--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,3 +10,20 @@
     --line-color:#ECECEC;
     --border-color:#EEEEEE;
 }
+
+ .index-link{
+    font-family: 'Roboto';
+ }
+
+ .beginning-title{
+    font-family: 'Roboto';
+ }
+
+ .beginning-button{
+    font-family: 'Roboto';
+ }
+
+  .subject{
+    font-family: "Roboto";
+  }
+
