--- a/CSS/style.css
+++ b/CSS/style.css
@@ -63,4 +63,30 @@
    font-family: "Roboto";
  }
 
+ .portofolio-link{
+  font-family: "Raleway";
+ }
+ 
+ .portofolio-list{
+  font-family: "Roboto";
+ }
+
+ .offers-item{
+  font-family: "Roboto";
+ }
+
+ .frame-item{
+  font-family: "Roboto";
+ }
+
+ .portofolio-adres{
+  font-family: "Roboto";
+ }
+
+ .email{
+  font-family: "Roboto";
+ }
+ 
+
+
 
