--- a/CSS/style.css
+++ b/CSS/style.css
@@ -47,7 +47,7 @@
    font-family: "Roboto";
 }
 
-.indek{
+.link{
    font-family: "Raleway";
 }
 
@@ -85,6 +85,9 @@
 
  .email{
   font-family: "Roboto";
+ }
+ .link{
+  font-family: "Raleway";
  }
  
 
