--- a/CSS/style.css
+++ b/CSS/style.css
@@ -23,11 +23,15 @@
 
 
 body{
-  font-family: "Roboto";
+  font-family: 'Roboto';
 
 .header{
   padding-top: 24px;
-   padding-bottom: 32px;
+   padding-bottom: 25px;
+}
+.header .container{
+  display: flex;
+  align-items: center;
 }
 
 
@@ -36,10 +40,11 @@ body{
    font-size: 26px;
    font-weight: 700;
    line-height: 1.38;
-   padding-top: 24px;
-   padding-bottom: 25px;
+   margin-right: 93px;
    color: var(--akcen-tcolor)
-  }
+   }
+
+
   .header-span{
     font-family: "Raleway";
     font-size: 26px;
@@ -49,6 +54,10 @@ body{
    padding-bottom: 25;
     color: var(--logo-color); 
   }
+  .index-list{
+    display: flex;
+    gap: 50px;
+  }
 
  .index-item{
     color: var(--logo-color);
@@ -57,9 +66,17 @@ body{
   font-weight: 500;
    line-height: 1.14;
   }
+
   .index-item:hover{
     color: var(--akcen-tcolor);
   }
+
+  .header-list{
+    display: flex;
+    gap: 50px;
+    margin-left: 344px;
+  }
+
 .adres{
   color: var(--et-textcolor);
 font-family: "Roboto";
@@ -89,8 +106,10 @@ letter-spacing: 0.28px;
 .beginning{
   padding-top: 200px;
   padding-bottom: 200px;
-  background-color: var(--footer-background)
-}
+  text-align: center;
+  background-color: var(--footer-background);
+  
+  }
 
 
  .beginning-title{
@@ -100,7 +119,9 @@ letter-spacing: 0.28px;
     font-weight: 900;
     line-height: 1.36;
     color: var(--tytle-color);
-    
+    width: 696px;
+    margin: auto;
+    margin-bottom: 30px;
     }
 
  .beginning-button{
@@ -111,6 +132,9 @@ letter-spacing: 0.28px;
      font-size: 16px;
     font-weight: 700;
     line-height: 1.85;
+    padding: 10px 32px;
+    border-radius: 4px;
+    border: none;
     }
 
   .subject{
@@ -118,19 +142,30 @@ letter-spacing: 0.28px;
     padding-bottom: 176px;
   }
 
+
+     .subject-list{
+      display: flex;
+      gap: 30px;
+     }
+
   .subject-title{
-    font-family: "Roboto";
+    font-family: 'Roboto';
     color: var(--main-color);
     font-size: 14px;
-   font-weight: 700;
+    font-weight: 700;
    line-height: 1.14;
+   letter-spacing: 0.42px;
    }
+
+
   .subject-text{
-   font-family: "Roboto";
+   font-family: 'Roboto';
    color: var(--et-textcolor);
    font-size: 14px;
    font-weight: 400;
    line-height: 1.71;
+   letter-spacing: 0.42px;
+   margin-top: 10px;
   }
   
   .main{
@@ -145,7 +180,14 @@ letter-spacing: 0.28px;
    font-size: 36px;
    font-weight: 700;
    line-height: 1.16;
+   margin-bottom: 50px;
  }
+
+ .main-img{
+  display: flex;
+  gap: 30px;
+ }
+
  .main-item{
   width: 370px;
 height: 294px;
@@ -170,12 +212,22 @@ flex-shrink: 0;
   font-style: normal;
   font-weight: 700;
   line-height: 1.16;
+  margin-bottom: 50px;
+ }
+ 
+ .team-list{
+  display: flex;
+  gap: 30px;
+  
  }
 
  .team-img{
   width: 270px;
 height: 260px;
 flex-shrink: 0;
+background-color: var(--tytle-color);
+border-radius: 0px 0px 4px 4px;
+
 }
 
 .team-titles{
@@ -185,6 +237,8 @@ flex-shrink: 0;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.18;
+ padding-top: 30px;
+ 
  }
  
  .team-text{
@@ -194,6 +248,25 @@ font-family: "Roboto";
 font-size: 16px;
 font-weight: 400;
 line-height: 1.18;
+padding-top: 10px;
+padding-bottom: 30px;
+}
+.footer-Web{
+  color: var(--akcen-tcolor);
+  font-family: "Raleway";
+  font-size: 26px;
+  font-weight: 700;
+  line-height: 1.38;
+  padding-bottom: 20px;
+ }
+ 
+ .footer-Studio{
+  color: var(--tytle-color);
+font-family: "Raleway";
+font-size: 26px;
+font-weight: 700;
+line-height: 1.38;
+padding-bottom: 20px;
 }
 
 .link{
@@ -216,7 +289,7 @@ line-height: 1.18;
    color: var(--tytle-color);
    font-size: 14px;
    font-weight: 400;
-
+    margin-bottom: 9px;
  }
 
  .link-adres{
@@ -225,6 +298,7 @@ line-height: 1.18;
    font-weight: 400;
    line-height: 1.71;
    color: var(--adres-color);
+   margin-bottom: 9px;
    }
 
  .link-number{
@@ -240,6 +314,7 @@ line-height: 1.18;
   padding-bottom: 60px;
   background-color:var(--footer-background)
   }
+
 
  .portofolio-link{
   color: var(--akcen-tcolor);
@@ -332,21 +407,7 @@ flex-shrink: 0;
  
  }
 
- .footer-Web{
-  color: var(--akcen-tcolor);
-  font-family: "Raleway";
-  font-size: 26px;
-  font-weight: 700;
-  line-height: 1.38;
- }
  
- .footer-Studio{
-  color: var(--tytle-color);
-font-family: "Raleway";
-font-size: 26px;
-font-weight: 700;
-line-height: 1.38;
-}
 
  
 
