--- a/CSS/style.css
+++ b/CSS/style.css
@@ -251,6 +251,17 @@ line-height: 1.18;
 padding-top: 10px;
 padding-bottom: 30px;
 }
+
+.footer{
+  padding-top: 60px;
+  padding-bottom: 60px;
+  background-color:var(--footer-background)
+  }
+
+.footer-list{
+  display: -ms-flexbox;
+  gap: 20px;
+}
 .footer-Web{
   color: var(--akcen-tcolor);
   font-family: "Raleway";
@@ -307,14 +318,10 @@ padding-bottom: 20px;
    font-weight: 400;
    line-height: 1.71;
    color: var(--adres-color);
+   margin-top: 9px;
  }
 
- .footer{
-  padding-top: 60px;
-  padding-bottom: 60px;
-  background-color:var(--footer-background)
-  }
-
+ 
 
  .portofolio-link{
   color: var(--akcen-tcolor);
