--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid blue;
+  outline: 1px solid red;
   
 }
 
@@ -106,7 +106,11 @@ letter-spacing: 0.28px;
   padding-top: 200px;
   padding-bottom: 200px;
   text-align: center;
-  background-color: var(--footer-background);
+ /* background-image: url(../img/hero.png); */
+ background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../img/hero.png);
+ background-position: center;
+ background-repeat: no-repeat;
+ background-size: cover;
   
   }
 
@@ -157,6 +161,23 @@ letter-spacing: 0.28px;
      text-transform: uppercase;
    }
 
+   .subject-item::before{
+    content: "";
+    display: block;
+    margin-bottom: 30px;
+    width: 270px;
+    height: 120px;
+    border-radius: 4px;
+    background-color: var(--team-background);
+     background-image: url(../img/antenna.jpg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 70px;
+   }
+
+   .subject-item:nth-child()
+
+   
 
   .subject-text{
    font-family: 'Roboto';
@@ -204,6 +225,8 @@ flex-shrink: 0;
   padding-top: 94px;
  }
 
+ 
+
  .team-title{
   color: var(--main-color);
   text-align: center;
@@ -228,6 +251,7 @@ flex-shrink: 0;
 background-color: var(--tytle-color);
 border-radius: 0px 0px 4px 4px;
 
+
 }
 
 .team-titles{
@@ -237,13 +261,14 @@ border-radius: 0px 0px 4px 4px;
  font-size: 16px;
  font-weight: 500;
  line-height: 1.18;
- padding-top: 30px;
+ margin-bottom: 10px;
  
  }
  
  .margin{
-  margin-top: 10px;
-  margin-bottom: 30px;
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: var(--tytle-color);
  }
 
  .team-text{
@@ -254,6 +279,7 @@ font-size: 16px;
 font-weight: 400;
 line-height: 1.18;
 
+
 }
 
 .footer{
@@ -263,8 +289,11 @@ line-height: 1.18;
   }
 
 .footer-list{
-  gap: 20px;
-  flex-wrap: wrap-reverse;
+  display: flex;
+  flex-direction: column;
+  gap: 9px;
+  margin-top: 9px;
+
 }
 .footer-Web{
   color: var(--akcen-tcolor);
@@ -281,6 +310,8 @@ font-family: "Raleway";
 font-size: 26px;
 font-weight: 700;
 line-height: 1.38;
+margin-bottom: 20px;
+display: inline-block;
 
 }
 
@@ -366,7 +397,9 @@ line-height: 1.38;
   font-size: 16px;
   font-weight: 500;
   line-height: 1.62;
-  ;
+  
+  padding: 6px 22px;
+  
  }
  .offers-button:hover{
   background-color: var(--akcen-tcolor);
@@ -404,12 +437,19 @@ font-weight: 500;
  .frame-list{
   display: flex;
   flex-wrap: wrap;
-    justify-content: space-between;
+   
     gap: 30px;
+    margin-top: 50px;
  }
 
  .frame-item{
-  padding-top: 50px;
+  
+  outline: 1px solid #EEE;
+  flex-basis: calc((100% - 60px) / 3);
+ }
+
+ .frame-box{
+  padding: 20px 24px;
  }
  
  .offers-title{
@@ -418,7 +458,8 @@ font-weight: 500;
   font-size: 18px;
   font-weight: 700;
   line-height: 2;
-  margin-top: 20px;
+  
+  margin-bottom: 4px;
  }
 
  .offers-text{
