--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,7 +19,7 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid red;
+  outline: 1px solid greenyellow;
   
 }
 
