--- a/CSS/style.css
+++ b/CSS/style.css
@@ -19,18 +19,10 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid greenyellow;
+  outline: 1px solid black;
   
 }
 
-.header{
-  padding-top: 24px;
-   padding-bottom: 25px;
-}
-.header .container{
-  display: flex;
-  align-items: center;
-}
 
 
    .webstudio-link{
@@ -42,7 +34,17 @@
    color: var(--akcen-tcolor);
     
    }
+     /* header */
 
+
+.header{
+  padding-top: 24px;
+   padding-bottom: 25px;
+}
+.header .container{
+  display: flex;
+  align-items: center;
+}
 
   .header-span{
     font-family: "Raleway";
@@ -53,6 +55,13 @@
    padding-bottom: 25;
     color: var(--logo-color); 
   }
+  
+  .header-list{
+    display: flex;
+    gap: 50px;
+    margin-left: auto;
+  }
+  /* index */
   .index-list{
     display: flex;
     gap: 50px;
@@ -70,12 +79,8 @@
     color: var(--akcen-tcolor);
   }
 
-  .header-list{
-    display: flex;
-    gap: 50px;
-    margin-left: auto;
-  }
-
+ 
+/* adres */
 .adres{
   color: var(--et-textcolor);
 font-family: "Roboto";
@@ -87,7 +92,7 @@ line-height: 1.14;
 .adres:hover{
   color: var(--akcen-tcolor);
 }
-
+/* number */
 
 .number{
   color: var(--et-textcolor);
@@ -101,6 +106,7 @@ letter-spacing: 0.28px;
 .number:hover{
   color: var(--akcen-tcolor);
 }
+/* beginning */
 
 .beginning{
   padding-top: 200px;
@@ -138,7 +144,9 @@ letter-spacing: 0.28px;
     padding: 10px 32px;
     border-radius: 4px;
     border: none;
+    box-shadow:rgba(0, 0, 0, 0.15);
     }
+    /* subject */
 
   .subject{
     padding-top: 94px;
@@ -170,20 +178,24 @@ letter-spacing: 0.28px;
     border-radius: 4px;
     background-color: var(--team-background);
      background-image: url(../img/antenna.svg);
-     
-    background-repeat: no-repeat;
+     background-repeat: no-repeat;
     background-position: center;
     background-size: 70px;
    }
-
-   .subject-item:nth-child(2){
+   .subject-item:nth-child(2)::before{
+    content:"";
     background-image: url(../img/clock.svg);
-    background-repeat: no-repeat;
+   }
+   .subject-item:nth-child(3)::before{
+    content: "";
+    background-image: url(../img/diagram.svg);
+   }
+   .subject-item:nth-child(4)::before{
+    content: "";
+    background-image: url(../img/astronaut.svg);
    }
 
-   
-
-  .subject-text{
+   .subject-text{
    font-family: 'Roboto';
    color: var(--et-textcolor);
    font-size: 14px;
@@ -192,7 +204,7 @@ letter-spacing: 0.28px;
    letter-spacing: 0.42px;
    margin-top: 10px;
   }
-  
+  /* main */
   .main{
     padding-top: 94px;
     padding-bottom: 94px;
@@ -222,7 +234,7 @@ flex-shrink: 0;
  .main-text{
    font-family: "Roboto";
  }
-
+/* team */
  .team{
   background-color: var(--team-background);
   padding-bottom: 94px;
@@ -266,25 +278,23 @@ border-radius: 0px 0px 4px 4px;
  font-weight: 500;
  line-height: 1.18;
  margin-bottom: 10px;
- 
  }
- 
- .margin{
-  padding-top: 30px;
-  padding-bottom: 30px;
-  background-color: var(--tytle-color);
- }
-
- .team-text{
+  .team-text{
 color: var(--et-textcolor);
 text-align: center;
 font-family: "Roboto";
 font-size: 16px;
 font-weight: 400;
 line-height: 1.18;
-
-
 }
+
+ .margin{
+  padding-top: 30px;
+  padding-bottom: 30px;
+  background-color: var(--tytle-color);
+ }
+
+
 
 .footer{
   padding-top: 60px;
@@ -404,6 +414,7 @@ display: inline-block;
   border: none;
   padding: 6px 22px;
   border-radius: 4px 4px 4px 4px;
+  box-shadow:rgba(0, 0, 0, 0.10),rgba(0, 0, 0, 0.08), rgba(0, 0, 0, 0.12);
   
  }
  .offers-button:hover{
