--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,7 +20,7 @@
   margin-left: auto;
   margin-right: auto;
   outline: 1px solid black;
-  
+ 
 }
 
 
@@ -113,7 +113,7 @@ letter-spacing: 0.28px;
   padding-bottom: 200px;
   text-align: center;
  /* background-image: url(../img/hero.png); */
- background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../img/hero.png);
+ background-image: linear-gradient(rgba(47, 48, 58, 0.40), rgba(47, 48, 58, 0.40)), url(../img/hero.jpg);
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
@@ -414,7 +414,7 @@ display: inline-block;
   border: none;
   padding: 6px 22px;
   border-radius: 4px 4px 4px 4px;
-  box-shadow:rgba(0, 0, 0, 0.10),rgba(0, 0, 0, 0.08), rgba(0, 0, 0, 0.12);
+  
   
  }
  .offers-button:hover{
