--- a/CSS/style.css
+++ b/CSS/style.css
@@ -423,6 +423,9 @@ height: 60px;
  fill: var(--svg-color);
 }
 
+
+
+
 .footer{
   padding-top: 60px;
   padding-bottom: 60px;
@@ -443,7 +446,6 @@ height: 60px;
   flex-direction: column;
   gap: 9px;
   margin-top: 9px;
-
 }
 .footer-Web{
   color: var(--akcen-tcolor);
@@ -465,7 +467,14 @@ display: inline-block;
 }
 
 
-
+.item-svg:hover{
+  background-color: var(--akcen-tcolor);
+  border-radius: 50px;
+    .footer-svg:hover{
+      fill: var(--tytle-color);
+  }
+  
+}
 
 .link{
    font-family: "Raleway";
@@ -508,11 +517,16 @@ display: inline-block;
 }
 
 
-  .footer-h1{
+  .footer-h2{
     color: var(--tytle-color) ;
-font-family: Roboto;
-font-size: 14px;
-font-weight: 700;
+    font-family: Roboto;
+    font-size: 14px;
+    font-style: normal;
+   font-weight: 700;
+   line-height: normal;
+    letter-spacing: 0.42px;
+   text-transform: uppercase;
+    padding-bottom: 20px;
 }
 
 .footer-svg{
@@ -523,6 +537,17 @@ fill: var(--tytle-color);
 
 .list-svg{
   display: flex;
+  gap: 10px;
+}
+
+.item-svg{
+  width: 44px;
+  height: 44px;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-color: rgba(255, 255, 255, 0.10);
 }
 
 
