--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,7 +20,7 @@
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid black;
+  /* outline: 1px solid black; */
 
 }
 
@@ -75,12 +75,21 @@
     font-size: 14px;
   font-weight: 500;
    line-height: 1.14;
+   transition-property: color;
+   transition-duration: 300ms;
+  transition-timing-function: cubic-bezier(1,1,0,-0.01);
+    
    }
 
   .index-item:hover{
     color: var(--akcen-tcolor);
+    
   }
 
+  
+
+   
+ 
 
 /* adres */
 .adres{
@@ -91,7 +100,8 @@ font-weight: 500;
 line-height: 1.14;
 display: flex;
 align-items: center;
-
+transition-property: color;
+transition-duration: 300ms;
 gap: 10px;
 }
 
@@ -122,6 +132,8 @@ letter-spacing: 0.28px;
 display: flex;
 align-items: center;
 gap: 10px;
+transition-property: color;
+transition-duration: 300ms;
 }
 
 .number:hover{
@@ -680,6 +692,156 @@ font-weight: 500;
   width: 100%;
 flex-shrink: 0;
  }
+
+ /* модальне вікно */
+
+.back-drop{
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal{
+  width: 528px;
+  border-radius: 4px;
+  background-color: var(--tytle-color);
+   box-shadow: 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+   position: relative;
+   padding: 40px;
+}
+
+.is-hidden{
+  opacity: 0;
+  pointer-events: none;
+}
+
+.modal-close{
+  width: 30px;
+  height: 30px;
+  border-radius: 50%;
+  border: 1px solid rgba(0, 0, 0, 0.10);;
+  background-color: transparent;
+  position: absolute;
+  top: 8px;
+  right: 8px;
+}
+
+.modal-title{
+  color: var(--main-color);
+  text-align: center;
+  font-family: Roboto;
+  font-size: 20px;
+  line-height: normal;
+  letter-spacing: 0.6px;
+  margin-bottom: 12px;
+}
+
+.modal-label{
+  color: var(--et-textcolor);
+  font-family: Roboto;
+  font-size: 12px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.12px;
+  
+}
+
+.modal-input{
+  width: 100%;
+  height: 40px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.20);
+  display: block;
+  margin-top: 4px;
+  margin-bottom: 10px;
+  padding-left: 42px;
+}
+
+.modal-coment{
+  width: 100%;
+  height: 120px;
+  border-radius: 4px;
+  border: 1px solid rgba(33, 33, 33, 0.20);
+  resize: none;
+  padding: 12px 16px;
+  color: rgba(117, 117, 117, 0.50);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: normal;
+  letter-spacing: 0.12px;
+  margin-bottom: 20px;
+  margin-top: 4px;
+  
+}
+
+.modal-check{
+  width: 16px;
+ height: 15px;
+}
+
+.modal-text{
+  color: #757575;
+  font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px; /* 171.429% */
+  letter-spacing: 0.42px;
+  margin-left: 9px;
+  margin-right: 4px;
+}
+
+.modal-link{
+  color: #2196F3;
+   font-size: 14px;
+  font-style: normal;
+  font-weight: 400;
+  line-height: 24px;
+  letter-spacing: 0.42px;
+  text-decoration-line: underline;
+  text-decoration-style: solid;
+  text-decoration-skip-ink: none;
+  text-decoration-thickness: auto;
+  text-underline-offset: auto;
+  text-underline-position: from-font;
+}
+
+  .modal-wrap{
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+  }
+
+  .modal-btn{
+    color: #FFF;
+text-align: center;
+font-family: Roboto;
+font-size: 16px;
+font-style: normal;
+font-weight: 700;
+line-height: 30px; /* 187.5% */
+letter-spacing: 0.96px;
+padding: 10px 52px;
+  border-radius: 4px;
+  background: #2196F3;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  border: none;
+  margin-top: 30px;
+}
+
+.modal-box{
+  display: flex;
+  justify-content: center;
+}
+
+
 
 
 
