--- a/style/main.css
+++ b/style/main.css
@@ -41,7 +41,6 @@ address {
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
-  outline: 1px solid black;
 }
 
 .webstudio-link {
@@ -51,6 +50,8 @@ address {
   line-height: 1.38;
   margin-right: 93px;
   color: var(--akcen-tcolor);
+  animation-name: move-list;
+  animation-duration: 1000ms;
 }
 
 .header {
@@ -83,8 +84,18 @@ address {
 .index-list {
   display: flex;
   gap: 50px;
+  animation-name: move-list;
+  animation-duration: 1000ms;
 }
 
+@keyframes move-list {
+  0% {
+    transform: translate(0, -200px) scale(0);
+  }
+  100% {
+    transform: translate(0, 0) scale(1);
+  }
+}
 .index-item {
   color: var(--logo-color);
   font-family: "Roboto";
@@ -112,6 +123,8 @@ address {
   transition-property: color;
   transition-duration: 300ms;
   gap: 10px;
+  animation-name: move-list;
+  animation-duration: 1000ms;
 }
 
 .adres:hover {
@@ -140,6 +153,8 @@ address {
   gap: 10px;
   transition-property: color;
   transition-duration: 300ms;
+  animation-name: move-list;
+  animation-duration: 1000ms;
 }
 
 .number:hover {
