--- a/scss/bace/_container.scss
+++ b/scss/bace/_container.scss
@@ -4,5 +4,5 @@
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
-    outline: 1px solid black;
+    // outline: 1px solid black;
   }
